--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -5,15 +5,19 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a style="cursor:pointer" routerLink="/recipes" >Recipes</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a style="cursor:pointer" routerLink="/recipes" >{{'Recipes'}}</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a style="cursor:pointer" routerLink="/auth" >Authenticate</a></li>
                 <li routerLinkActive="active"><a style="cursor:pointer" routerLink="/shopping-list" >Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown>
-                    <a style="cursor:pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <li *ngIf="isAuthenticated">
+                    <a style="cursor: pointer;">Logout</a>
+                </li>
+                <li class="dropdown" appDropdown *ngIf="isAuthenticated">
+                    <a style="cursor:pointer" class="dropdown-toggle" role="button">{{'Manage'}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a style="cursor:pointer">Save Data</a></li>
-                        <li><a style="cursor:pointer">Fetch Data</a></li>
+                        <li><a style="cursor:pointer" (click)="onSave()">Save Data</a></li>
+                        <li><a style="cursor:pointer" (click)="onFetch()">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
